# feature-aligned-penner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  add_trivial_quad_parameterization.cpp  generate_components.cpp  generate_field.cpp  modify_field.cpp  parameterize_aligned.cpp  symdir.json  util.h  view_quad_mesh.cpp  view_seamless_uv.cpp
